Add header logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 	<header>
-		<h1>令和123年度　山崎県 阿木町 扇柱祭</h1>
+		<h1>
+            <img class="logo" src="img/header-logo.png"/>
+            <span>令和7年度　山崎県 阿木町 扇柱祭</span>
+        </h1>
 		<nav>
             <h2>目次</h2>
             <ul>
