Modify header design

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 	<header>
-		<h1>
+        <div class="logo-wrapper">
             <img class="logo" src="img/header-logo.png"/>
-            <span>令和7年度　山崎県 阿木町 扇柱祭</span>
-        </h1>
+            <h1>山崎県 阿木町 扇柱祭</h1>
+        </div>
 		<nav>
             <h2>目次</h2>
             <ul>
