Add image zoom functionality

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<title>扇柱祭</title>
 	<link rel="icon" href="favicon.ico" type="image/png">
 	<link rel="stylesheet" href="css/index.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" crossorigin=""></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<header>
@@ -33,10 +36,18 @@
             祭りの期間中、阿木町の通りは伝統的な浴衣や着物を身にまとった人々で賑わい、美味しい地元の料理や伝統的な屋台が設置されます。夜になると、扇柱が美しく照らし出され、祭りのハイライトである花火大会が行われます。この花火大会は、山崎県内外から多くの人々が訪れ、美しい花火の光と音楽に魅了されます。
         </p>
         <div class="hr-flexbox">
-            <img class="small" src="img/festival-image1.png" />
-            <img class="small" src="img/festival-image2.png" />
-            <img class="small" src="img/festival-image3.png" />
-            <img class="small" src="img/festival-image4.png" />
+            <a href="img/festival-image1.png" data-lightbox="group">
+                <img class="small" src="img/festival-image1.png" />
+            </a>
+            <a href="img/festival-image2.png" data-lightbox="group">
+                <img class="small" src="img/festival-image2.png" />
+            </a>
+            <a href="img/festival-image3.png" data-lightbox="group">
+                <img class="small" src="img/festival-image3.png" />
+            </a>
+            <a href="img/festival-image4.png" data-lightbox="group">
+                <img class="small" src="img/festival-image4.png" />
+            </a>
         </div>
     </article>
 	<footer>
