Add catchy greeting

--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
 		<nav>
             <h2>目次</h2>
             <ul>
+                <li><a href="#greeting">ご挨拶</a></li>
                 <li><a href="#about">扇柱祭とは</a></li>
             </ul>
         </nav>
 	</header>
+    <hr>
+    <article id="greeting">
+        <h2>美しい風景と豊かな伝統文化を肌で感じ、心温まるひとときを。</h2>
+    </article>
     <hr>
 	<article id="about">
         <h2>扇柱祭とは</h2>
