--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
 	<article id="about">
         <h2>扇柱祭とは</h2>
         <p>
-            「扇柱祭」は、山崎県の阿木町で毎年開催される、美しい伝統的な祭りです。この祭りは、山崎県の豊かな文化と歴史を称賛し、地域社会を結びつける大切な行事として、数世代にわたり受け継がれてきました。
+            阿木町、山崎県の隠れた宝石が輝く場所で、年に一度、私たちは伝統的な扇柱祭を誇りをもって開催しています。<br>
+            <b>「扇柱祭」</b>は、美しい季節の訪れを祝うお祭りで、阿木町の美しい通りを彩り、人々の笑顔で溢れる場所です。</br>
+            木工芸の職人によって精巧に彫刻され、鮮やかに装飾された扇柱が、町の通りに立ち、幻想的な世界に誘います。
         </p>
         <p>
-            その名前にも表されているように、美しく飾り立てられた扇柱が中心となる祭りです。扇柱は、木工芸の職人たちによって精巧に彫刻され、色鮮やかに装飾されます。これらの扇柱は祭りの期間中、阿木町のあちこちに立てられ、町全体が華やかな雰囲気に包まれます。
+            地域の伝統音楽や踊りも楽しむことができ、広場では地元の芸能団体や子供たちが伝統的な演目を披露します。</br>
+            山崎県 阿木町の、この特別な祭りに足を運んで、幻想的な光景の中で、心温まるひとときを共に過ごしましょう。
         </p>
-        <p>
-            祭りの期間中、阿木町の通りは伝統的な浴衣や着物を身にまとった人々で賑わい、美味しい地元の料理や伝統的な屋台が設置されます。夜になると、扇柱が美しく照らし出され、祭りのハイライトである花火大会が行われます。この花火大会は、山崎県内外から多くの人々が訪れ、美しい花火の光と音楽に魅了されます。
-        </p>
+        <hr>
         <div class="hr-flexbox">
             <a href="img/festival-image1.png" data-lightbox="group">
                 <img class="small" src="img/festival-image1.png" />
