Change some wording

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <h2>扇柱祭とは</h2>
         <p>
             阿木町、山崎県の隠れた宝石が輝く場所で、年に一度、私たちは伝統的な扇柱祭を誇りをもって開催しています。<br>
-            <b>「扇柱祭」</b>は、美しい季節の訪れを祝うお祭りで、阿木町の美しい通りを彩り、人々の笑顔で溢れる場所です。</br>
+            「扇柱祭」は、美しい季節の訪れを祝うお祭りで、阿木町の美しい通りを彩り、人々の笑顔で溢れる場所です。</br>
             木工芸の職人によって精巧に彫刻され、鮮やかに装飾された扇柱が、町の通りに立ち、幻想的な世界に誘います。
         </p>
         <p>
             地域の伝統音楽や踊りも楽しむことができ、広場では地元の芸能団体や子供たちが伝統的な演目を披露します。</br>
-            山崎県 阿木町の、この特別な祭りに足を運んで、幻想的な光景の中で、心温まるひとときを共に過ごしましょう。
+            山崎県 阿木町の、この特別な祭りに足を運んで、幻想的な光景の中で心温まるひとときを共に過ごしましょう。
         </p>
         <hr>
         <div class="hr-flexbox">
