Add guest introduction

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="icon" href="favicon.ico" type="image/png">
 	<link rel="stylesheet" href="css/index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" crossorigin=""></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -21,6 +21,7 @@
             <ul>
                 <li><a href="#greeting">ご挨拶</a></li>
                 <li><a href="#about">扇柱祭とは</a></li>
+                <li><a href="#guest">来賓</a></li>
             </ul>
         </nav>
 	</header>
@@ -40,7 +41,32 @@
             地域の伝統音楽や踊りも楽しむことができ、広場では地元の芸能団体や子供たちが伝統的な演目を披露します。</br>
             山崎県 阿木町の、この特別な祭りに足を運んで、幻想的な光景の中で心温まるひとときを共に過ごしましょう。
         </p>
-        <hr>
+    </article>
+    <hr>
+    <article id="guest">
+        <h2>来賓</h2>
+        <div class="hr-flexbox">
+            <a href="img/guest1.png" data-lightbox="group">
+                <img class="small" src="img/guest1.png" />
+                <span>三降　太郎</span>
+            </a>
+            <a href="img/guest2.png" data-lightbox="group">
+                <img class="small" src="img/guest2.png" />
+                <span>四松　耕三</span>
+            </a>
+            <a href="img/guest3.png" data-lightbox="group">
+                <img class="small" src="img/guest3.png" />
+                <span>五寺　幸子</span>
+            </a>
+            <a href="img/guest4.png" data-lightbox="group">
+                <img class="small" src="img/guest4.png" />
+                <span>六柱　梅</span>
+            </a>
+        </div>
+    </article>
+    <hr>
+    <article>
+        <h2>ギャラリー</h2>
         <div class="hr-flexbox">
             <a href="img/festival-image1.png" data-lightbox="group">
                 <img class="small" src="img/festival-image1.png" />
@@ -56,6 +82,7 @@
             </a>
         </div>
     </article>
+    <hr>
 	<footer>
 		<p>© 阿木町 企画委員会</p>
 	</footer>
