Add festival photos

--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
             <a href="img/festival-image4.png" data-lightbox="group">
                 <img class="small" src="img/festival-image4.png" />
             </a>
+            <a href="img/festival-image5.png" data-lightbox="group">
+                <img class="small" src="img/festival-image5.png" />
+            </a>
+            <a href="img/festival-image6.png" data-lightbox="group">
+                <img class="small" src="img/festival-image6.png" />
+            </a>
+            <a href="img/festival-image7.png" data-lightbox="group">
+                <img class="small" src="img/festival-image7.png" />
+            </a>
+            <a href="img/festival-image8.png" data-lightbox="group">
+                <img class="small" src="img/festival-image8.png" />
+            </a>
         </div>
     </article>
     <hr>
