Add navigation to photo gallary section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li><a href="#greeting">ご挨拶</a></li>
                 <li><a href="#about">扇柱祭とは</a></li>
                 <li><a href="#guest">来賓</a></li>
+                <li><a href="#image">写真</a></li>
             </ul>
         </nav>
 	</header>
@@ -65,8 +66,8 @@
         </div>
     </article>
     <hr>
-    <article>
-        <h2>ギャラリー</h2>
+    <article id="image">
+        <h2>写真</h2>
         <div class="hr-flexbox">
             <a href="img/festival-image1.png" data-lightbox="group">
                 <img class="small" src="img/festival-image1.png" />
