--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 		<nav>
             <h2>目次</h2>
             <ul>
-                <li><a href="#greeting">ご挨拶</a></li>
                 <li><a href="#about">扇柱祭とは</a></li>
                 <li><a href="#guest">来賓</a></li>
                 <li><a href="#image">写真</a></li>
@@ -27,7 +26,7 @@
         </nav>
 	</header>
     <hr>
-    <article id="greeting">
+    <article>
         <h2>美しい風景と豊かな伝統文化を肌で感じ、心温まるひとときを。</h2>
     </article>
     <hr>
