--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
                 <li><a href="#about">扇柱祭とは</a></li>
                 <li><a href="#guest">来賓</a></li>
                 <li><a href="#image">写真</a></li>
+                <li><a href="#access">アクセス</a></li>
             </ul>
         </nav>
 	</header>
@@ -95,6 +96,12 @@
         </div>
     </article>
     <hr>
+    <article>
+        <h2>アクセス</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d218198.15514414327!2d173.3965745452285!3d31.294175925144817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sjp!4v1695956594160!5m2!1sen!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <br>
+        <span class="notation">お近くに駐車場・公共交通機関はございません。ご自身でお越しください。</span>
+    </article>
 	<footer>
 		<p>© 阿木町 企画委員会</p>
 	</footer>
