--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <article>
         <h1>Samples</h1>
         <ul>
-            <a href="src/index.html"><li>山崎県 阿木町 扇柱祭</li></a>
+            <a href="src/sample1/index.html"><li>山崎県 阿木町 扇柱祭</li></a>
         </ul>
     </article>
 </body>
