Add wrapper for the image

--- a/src/sample2/index.html
+++ b/src/sample2/index.html
@@ -12,7 +12,10 @@
     <div class="background2"></div>
     <div class="background3"></div>
     <div class="main">
-        <img class="center bold-border" height="350" width="500" src="img/image1.png">
+        <div class="television center">
+            <div class="antenna top-center-head-out"></div>
+            <img class="center bold-border" height="350" width="500" src="img/image1.png">
+        </div>
     </div>
 </body>
 </html>
