--- a/src/sample2/index.html
+++ b/src/sample2/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>劇場版：新入社員　暗黒企業と魔法の辞職届</title>
+	<title>???</title>
 	<link rel="icon" href="favicon.ico" type="image/png">
 	<link rel="stylesheet" href="css/index.css">
 </head>
