Replace with google map (Sea > Random location on land)

--- a/src/sample1/index.html
+++ b/src/sample1/index.html
@@ -98,7 +98,7 @@
     <hr>
     <article>
         <h2>アクセス</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d218198.15514414327!2d173.3965745452285!3d31.294175925144817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sjp!4v1695956594160!5m2!1sen!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50613.82839924894!2d131.485450455369!3d32.85933661513926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601cb2753d53dc5d%3A0x92ed8e72f282450e!2sAgi%2C%20Nakatsugawa%2C%20Gifu%20509-7321!5e0!3m2!1sen!2sjp!4v1696477752798!5m2!1sen!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <br>
         <span class="notation">お近くに駐車場・公共交通機関はございません。ご自身でお越しください。</span>
     </article>
