Cheapen page header design

--- a/src/sample2/index.html
+++ b/src/sample2/index.html
@@ -11,7 +11,14 @@
 	<header>
         <div class="logo-wrapper">
             <img class="logo" src="img/header-logo.png"/>
-            <h1>白本県 藍茂町 風炉古里祭</h1>
+            <div class="festival-name">
+                <div>風</div>
+                <div>炉</div>
+                <div>古</div>
+                <div>里</div>
+                <div>祭</div>
+            </div>
+            </h1>
         </div>
 	</header>
     <hr>
