Add an introduction section

--- a/src/sample2/index.html
+++ b/src/sample2/index.html
@@ -23,13 +23,15 @@
 	</header>
     <hr>
     <article>
-        <h2>誘い文</h2>
+        <h1>緑木乱立し、可食部ふゆる。水に浸り、根強く伸びる。</h1>
     </article>
     <hr>
-	<article id="about">
-        <h2>タイトル</h2>
+	<article>
+        <h2>ご紹介</h2>
         <p>
-            テキスト
+            白本県 朝茂木市では、古来より<b>風炉古里（ブロッコリー）</b>が栽培されてきました。<br>
+            900年にこの地を治めた豪族：<b>藤原 茸頭（ふじわら まいとう）</b>が豊作を祈願して<br>
+            始めた祭が<b>風炉古里祭（ぶろこりまつり）</b>です。
         </p>
     </article>
 	<footer>
