Add character image

--- a/src/sample2/index.html
+++ b/src/sample2/index.html
@@ -33,6 +33,9 @@
             900年にこの地を治めた豪族：<b>藤原 茸頭（ふじわら まいとう）</b>が豊作を祈願して<br>
             始めた祭が<b>風炉古里祭（ぶろこりまつり）</b>です。
         </p>
+        <div class="hr-flexbox">
+            <img src="img/character.png" height="300" width="300">
+        </div>
     </article>
 	<footer>
 		<div>© みんみん倶楽部</div>
