Add history section

--- a/src/sample2/index.html
+++ b/src/sample2/index.html
@@ -36,6 +36,14 @@
         <div class="hr-flexbox">
             <img src="img/character.png" height="300" width="300">
         </div>
+        <hr>
+        <h2>豊かな大地の恵み</h2>
+        <p>
+            朝茂木市は古来より農業の盛んな地として栄えてきました。雨季に蓄えられた<br>
+            地下水が、乾季に作物を育む恵みとなります。荻山川の豊かな自然が、この地<br>
+            で長らく風呂古里が栽培される一助となりました。2000年の歴史ある作物の<br>
+            味を、ぜひ白本県 朝茂木の地で存分にご堪能ください。
+        </p>
     </article>
 	<footer>
 		<div>© みんみん倶楽部</div>
