Add shop introduction

--- a/src/sample2/index.html
+++ b/src/sample2/index.html
@@ -44,6 +44,20 @@
             で長らく風呂古里が栽培される一助となりました。2000年の歴史ある作物の<br>
             味を、ぜひ白本県 朝茂木の地で存分にご堪能ください。
         </p>
+        <hr>
+        <h2>店舗</h2>
+        <h3>朝茂木 販売店(朝茂木市 広長瀬103-5-2)</h3>
+        <div class="hr-flexbox">
+            <img src="img/shop1-1.png" height="300" width="300">
+            <img src="img/shop1-2.png" height="300" width="300">
+            <img src="img/shop1-3.png" height="300" width="300">
+        </div>
+        <h3>東朝茂木 販売店(朝茂木市 外長瀬60-2)</h3>
+        <div class="hr-flexbox">
+            <img src="img/shop2-1.png" height="300" width="300">
+            <img src="img/shop2-2.png" height="300" width="300">
+            <img src="img/shop2-3.png" height="300" width="300">
+        </div>
     </article>
 	<footer>
 		<div>© みんみん倶楽部</div>
