Add farm and lab introduction

--- a/src/sample2/index.html
+++ b/src/sample2/index.html
@@ -58,6 +58,18 @@
             <img src="img/shop2-2.png" height="300" width="300">
             <img src="img/shop2-3.png" height="300" width="300">
         </div>
+        <hr>
+        <h2>生産拠点</h2>
+        <h3>あんしんファーム</h3>
+        <div class="hr-flexbox">
+            <img src="img/farm1.png" height="300" width="300">
+            <img src="img/farm2.png" height="300" width="300">
+        </div>
+        <h3>西広瀬 研究センター</h3>
+        <div class="hr-flexbox">
+            <img src="img/lab1.png" height="300" width="300">
+            <img src="img/lab2.png" height="300" width="300">
+        </div>
     </article>
 	<footer>
 		<div>© みんみん倶楽部</div>
