Add link to sample

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>Samples</h1>
         <ul>
             <a href="src/sample1/index.html"><li>山崎県 阿木町 扇柱祭</li></a>
+            <a href="src/sample2/index.html"><li>白本県 朝茂木市 風炉古里祭</li></a>
         </ul>
     </article>
 </body>
