--- a/src/sample2/index.html
+++ b/src/sample2/index.html
@@ -6,6 +6,14 @@
 	<title>風炉古里祭</title>
 	<link rel="icon" href="favicon.ico" type="image/png">
 	<link rel="stylesheet" href="css/index.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E9M38S4KND"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-E9M38S4KND');
+    </script>
 </head>
 <body>
 	<header>
