--- a/src/sample3/index.html
+++ b/src/sample3/index.html
@@ -19,5 +19,14 @@
             </div>
         </div>
 	</header>
+    <article>
+        <h1>おもてなしの教え</h1>
+        <p>
+            おもてなし教（Hospitalitism）は、利他の祈りと行動を柱として活動する信仰者の集団です。<br>
+            <ruby>磯山 海驢<rt>いそやま あしか</rt></ruby>が、一九八五年に利他的な人々を世に増やす目的で、<ruby>面梨神殿<rt>おもてなししんでん</rt></ruby>を建設しました。
+        </p>
+        <img src="img/temple1.png" alt="temple1" width="330" height="330">
+        <img src="img/temple2.png" alt="temple2" width="330" height="330">
+    </article>
 </body>
 </html>
