--- a/src/sample3/index.html
+++ b/src/sample3/index.html
@@ -27,6 +27,38 @@
         </p>
         <img src="img/temple1.png" alt="temple1" width="330" height="330">
         <img src="img/temple2.png" alt="temple2" width="330" height="330">
+        <hr>
+        <h1>指導者</h1>
+        <div class="portrait">
+            <img class="face" src="img/hanako.png" alt="temple1" width="200" height="200">
+            <div class="name"><ruby>梅田 花子<rt>うめだ はなこ</rt></ruby></div>
+            <p>
+                おもてなし教の創設者であり、その教えを日本国内外に広める使命に生涯を捧げています。彼女は知識と智恵に満ち、おもてなしの心と思いやりを重要視し、人々が互いに尊重し支え合うことを奨励しています。
+            </p>
+            <p>
+                梅田花子はおもてなしの文化を日本の伝統と結びつけ、伝統的な日本の価値観とおもてなし教の教義を調和させています。彼女は地球環境への配慮も大切にし、持続可能な生活と自然への感謝の大切さを教え、実践しています。
+            </p>
+            <p>
+                梅田花子はおもてなし教の信者たちに希望と指導を提供し、共感と奉仕の精神を鼓舞しており、彼女の導きのもとで、おもてなし教のコミュニティは日本国内外で平和と調和を築くために努力しています。
+            </p>
+        </div>
+        <div class="portrait">
+            <img class="face" src="img/yuko.png" alt="temple1" width="200" height="200">
+            <div class="name"><ruby>中村 悠子<rt>なかむら ゆうこ</rt></ruby></div>
+            <p>
+                おもてなし教の信者で、梅田花子からの指導と啓示に深く感銘を受け、その教えを熱心に学び、実践しています。彼女はおもてなしの精神と共感を広める使命に情熱を傾け、おもてなし教の理念を共有し、他の信者たちにも伝えています。
+            </p>
+            <p>
+                梅田花子との師弟関係を大切にし、おもてなしの心を具現化するために努力し、おもてなし教のコミュニティにおいて重要なリーダーシップの役割を果たしています。彼女は信者たちに希望と指導を提供し、おもてなしの精神を広めるために力を尽くしています。
+            </p>
+        </div>
+        <div class="portrait">
+            <img class="face" src="img/kentaro.png" alt="temple1" width="200" height="200">
+            <div class="name"><ruby>梅田 健太郎<rt>うめだ けんたろう</rt></ruby></div>
+            <p>
+                梅田花子さんと共におもてなし教の普及と実践に情熱を注ぎ、彼女の側で人々に共感と思いやりを広めるために共に歩んでいます。彼もまた、おもてなしの心を持ち、人々の幸福と調和に貢献することを大切にしています。夫婦ともにおもてなし教の理念に共感し、共に社会にポジティブな影響を与え、人々の心を温かく受け入れる使命に情熱を傾けています。
+            </p>
+        </div>
     </article>
 </body>
 </html>
