--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <ul>
             <a href="src/sample1/index.html"><li>山崎県 阿木町 扇柱祭</li></a>
             <a href="src/sample2/index.html"><li>白本県 朝茂木市 風炉古里祭</li></a>
+            <a href="src/sample3/index.html"><li>おもてなし教</li></a>
         </ul>
     </article>
 </body>
